# socketFramework

./: CMakeLists.txt  InputOutputInterface.h  README.txt  ServerInterface.h  SocketConnection.cpp  SocketConnection.h  SocketServer.cpp  UnixSocket.cpp  UnixSocket.h  main.cpp  main2.cpp
src/: CMakeLists.txt  main.cpp  main2.cpp
src/Framework/: CMakeLists.txt  SocketClient.cpp  SocketClient.h  SocketConnection.h  SocketServer.h  UnixSocket.cpp  UnixSocket.h
src/Interfaces/: ClientInterface.h  InputOutputInterface.h
